issue 3211 - fix scrollbar not showing when more than 400px worth of tags

--- a/themes/rayCivicrm/nyss_skin/skin.css
+++ b/themes/rayCivicrm/nyss_skin/skin.css
@@ -170,7 +170,7 @@ input.form-submit {
     
 div.token-input-dropdown-facebook {
     max-height: 400px;
-    overflow: auto;
+    overflow-y: scroll;
     }
 
 #crm-container div.section-hidden-border {background-color: transparent;}
